--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <header class="site-header inicio">
         <div class="row mx-0">
-            <div class="col-12 col-lg-2 p-0">
+            <div class="col-12 col-lg-2 p-0 contenedor-logo-texto">
                 <div class="logo mx-auto">
                     <a href="index.html">
                         <img src="img/logo/logo_albercas_del_mar.png" alt="ALBERCAS DEL MAR LOGO">
@@ -51,7 +51,7 @@
                 </h4>
             </div>
             <div class="col-12 col-lg-10 p-0">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 box-shadow-principal h-100">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 box-shadow-principal">
                     <div class="container-fluid">
                         <button 
                         class="navbar-toggler" 
