--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/albercas_del_mar_3.jpeg" 
-                class="d-block w-100">
+                class="w-100 d-none">
+                <video autoplay="true" loop muted class="w-100">
+                    <source src="video/playa.mp4" type="video/mp4">
+                </video>
                 <div class="carousel-caption d-flex">
                     <div class="p-r fondo-text-slider">
                         <div class="font-size-120px line-height-normal-60p titulo-header  p-5">
