--- a/contacto.html
+++ b/contacto.html
@@ -87,6 +87,9 @@
                                 href="galeria.html">Galería</a>
                                 <a 
                                 class="nav-link p-3" 
+                                href="galery.html">Galería</a>
+                                <a 
+                                class="nav-link p-3" 
                                 href="contacto.html">Contacto</a>
                             </div>
                             <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web">
