--- a/nosotros.html
+++ b/nosotros.html
@@ -83,8 +83,8 @@
                                 class="nav-link p-3" 
                                 href="servicios.html">Servicios</a>
                                 <a 
-                                class="nav-link p-3 d-none" 
-                                href="galeria.html">Galería</a>
+                                class="nav-link p-3" 
+                                href="galery.html">Galería</a>
                                 <a 
                                 class="nav-link p-3" 
                                 href="contacto.html">Contacto</a>
