--- a/galery.html
+++ b/galery.html
@@ -131,9 +131,9 @@
 
     <div class="row col-12 col-md-4 align-self-baseline">
       <div class="pswp-gallery__item">
-        <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/3/img-2500.jpg" data-pswp-width="2500"
+        <a href="img/galeria/otras_imagenes/imagen_2.jpeg" data-pswp-width="2500"
           data-pswp-height="1666" target="_blank">
-          <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/3/img-200.jpg" alt="Demo image 2" />
+          <img src="img/galeria/otras_imagenes/imagen_2.jpeg" alt="Demo image 2" />
         </a>
         <div class="pswp-caption-content">
           <b>Vivamus elementum (2016)</b><br>ullamcorper ultricies nisi, nam eget dui, etiam rhoncus, maecenas tempus,
@@ -144,9 +144,9 @@
 
     <div class="row col-12 col-md-4 align-self-baseline">
       <div class="pswp-gallery__item">
-        <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/4/img-2500.jpg" data-pswp-width="2500"
+        <a href="img/galeria/otras_imagenes/imagen_3.jpeg" data-pswp-width="2500"
           data-pswp-height="1667" target="_blank">
-          <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/4/img-200.jpg" alt="Demo image 3" />
+          <img src="img/galeria/otras_imagenes/imagen_3.jpeg" alt="Demo image 3" />
         </a>
         <div class="pswp-caption-content">
           <b>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
@@ -157,9 +157,9 @@
 
     <div class="row col-12 col-md-4 align-self-baseline">
       <div class="pswp-gallery__item">
-        <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/5/img-2500.jpg" data-pswp-width="2500"
+        <a href="img/galeria/otras_imagenes/imagen_4.jpeg" data-pswp-width="2500"
           data-pswp-height="1668" target="_blank">
-          <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/5/img-200.jpg" alt="Demo image 4" />
+          <img src="img/galeria/otras_imagenes/imagen_4.jpeg" alt="Demo image 4" />
         </a>
         <div class="pswp-caption-content">
           Short caption with <a href="https://example.com" target="_blank">the link</a>.
