--- a/galery.html
+++ b/galery.html
@@ -578,7 +578,7 @@
                 <img src="img/galeria/otras_imagenes/imagen_40.jpeg" alt="Imagen galería" />
             </a>
             <div class="pswp-caption-content">
-                <p>Cambio de andador antideslizante</p>
+                <p>Piscinas con cascada</p>
             </div>
         </div>
     </div>
