--- a/index.html
+++ b/index.html
@@ -646,143 +646,145 @@
         <h1 class="titulo-descriptivo titulo-principal letter-spacing-5px text-uppercase text-center">
             Tipos de albercas que le ofrecemos:
         </h1>
-        <div class="row mx-0 my-5">
-            <div class="col-12 col-md-4">
-                <div class="header-tarjeta">
-                    <h3>Albercas Comerciales:</h3>
+        <div class="container">
+            <div class="row mx-0 my-5">
+                <div class="col-12 col-md-4">
+                    <div class="header-tarjeta">
+                        <h3>Albercas Comerciales:</h3>
+                    </div>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Hoteles</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/comerciales/hoteles.jpg" alt="Hoteles">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Centros de recreación</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/comerciales/centro_recreacion.jpg" alt="Centros de recreación">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Parques acuáticos</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/comerciales/parques_acuaticos.jpg" alt="Parques acuáticos">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas olímpicas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/comerciales/albercas_olimpicas.jpg" alt="Albercas olímpicas">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Chapoteaderos</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/comerciales/chapoteadero.jpg" alt="Chapoteaderos">
+                        </div>
+                    </article>
                 </div>
-                <article class="tarjeta-presentacion-servicio col-12">
+                <div class="col-12 col-md-4">
                     <div class="header-tarjeta">
-                        <h3>Hoteles</h3>
+                        <h3>Albercas Residenciales:</h3>
                     </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/comerciales/hoteles.jpg" alt="Hoteles">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Centros de recreación</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/comerciales/centro_recreacion.jpg" alt="Centros de recreación">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Parques acuáticos</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/comerciales/parques_acuaticos.jpg" alt="Parques acuáticos">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas olímpicas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/comerciales/albercas_olimpicas.jpg" alt="Albercas olímpicas">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Chapoteaderos</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/comerciales/chapoteadero.jpg" alt="Chapoteaderos">
-                    </div>
-                </article>
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="header-tarjeta">
-                    <h3>Albercas Residenciales:</h3>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Piscina</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/residenciales/piscinas.jpg" alt="Piscina">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas pequeñas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/residenciales/albercas_pequenas.jpg" alt="Albercas pequeñas">
+                        </div>
+                    </article>                
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas de cristales</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/residenciales/alberca_cristal.jpg" alt="Albercas de cristales">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas nalturas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/residenciales/albercas_naturales.jpg" alt="Albercas nalturas">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas en alturas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/residenciales/albercas_altura.jpeg" alt="Albercas en alturas">
+                        </div>
+                    </article>
                 </div>
-                <article class="tarjeta-presentacion-servicio col-12">
+                <div class="col-12 col-md-4">
                     <div class="header-tarjeta">
-                        <h3>Piscina</h3>
+                        <h3>Albercas Naturales:</h3>
                     </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/residenciales/piscinas.jpg" alt="Piscina">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas pequeñas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/residenciales/albercas_pequenas.jpg" alt="Albercas pequeñas">
-                    </div>
-                </article>                
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas de cristales</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/residenciales/alberca_cristal.jpg" alt="Albercas de cristales">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas nalturas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/residenciales/albercas_naturales.jpg" alt="Albercas nalturas">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas en alturas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/residenciales/albercas_altura.jpeg" alt="Albercas en alturas">
-                    </div>
-                </article>
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="header-tarjeta">
-                    <h3>Albercas Naturales:</h3>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas saladas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/naturales/salda.jpeg" alt="Albercas saladas">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas agua de mar</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/naturales/alberca_agua_salada.jpg" alt="Albercas agua de mar">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas rústicas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img 
+                            src="img/galeria/tipos_alberca/naturales/albercas_rusticas.jpg" 
+                            alt="Albercas rústicas">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas ecológicas</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/naturales/albercas_ecologicas.jpg" alt="Albercas ecológicas">
+                        </div>
+                    </article>
+                    <article class="tarjeta-presentacion-servicio col-12">
+                        <div class="header-tarjeta">
+                            <h3>Albercas de terapia física</h3>
+                        </div>
+                        <div class="contenido-tarjeta">
+                            <img src="img/galeria/tipos_alberca/naturales/alberca_terapia_fisica.jpg" alt="Albercas de terapia física">
+                        </div>
+                    </article>
                 </div>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas saladas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/naturales/salda.jpeg" alt="Albercas saladas">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas agua de mar</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/naturales/alberca_agua_salada.jpg" alt="Albercas agua de mar">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas rústicas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img 
-                        src="img/galeria/tipos_alberca/naturales/albercas_rusticas.jpg" 
-                        alt="Albercas rústicas">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas ecológicas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/naturales/albercas_ecologicas.jpg" alt="Albercas ecológicas">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas de terapia física</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/galeria/tipos_alberca/naturales/alberca_terapia_fisica.jpg" alt="Albercas de terapia física">
-                    </div>
-                </article>
             </div>
         </div>
         <section class="imagen-contacto p-r">
@@ -1044,8 +1046,12 @@
                         <hr class="w-auto">
                         <h4 class="b-b-3px-c-secundario mb-0 text-uppercase mb-4">Dirección:</h4>
                         <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15181.535966728045!2d-102.2063243830831!3d17.96086330779546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315c6f0e055555%3A0x8efb2bd16613fb75!2sPalapas%20y%20Caba%C3%B1as%20Rio%20Mar!5e0!3m2!1ses!2smx!4v1654283596615!5m2!1ses!2smx"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.471885459347!2d-102.196537185107!3d17.956769690859733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315de95005187b%3A0xfc3a76c03dfdcb0e!2sNicolas%20Bravo%20341%20Centro!5e0!3m2!1ses!2smx!4v1652822012953!5m2!1ses!2smx"
+                        width="600" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <p class="text-justify p-4">
                             Nicolas Bravo 341, Centro, <br> Cd. Lázaro Cárdenas, Mich, MX.
