--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 class="nav-link p-3" 
                                 href="contacto.html">Contacto</a>
                             </div>
-                            <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web">
+                            <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web mb-4">
                                 <!-- Páginas web relacionadas -->
                                 <a 
                                 class="nav-link p-3 redireccion-web" 
@@ -1046,7 +1046,7 @@
                         <hr class="w-auto">
                         <h4 class="b-b-3px-c-secundario mb-0 text-uppercase mb-4">Dirección:</h4>
                         <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.471885459347!2d-102.196537185107!3d17.956769690859733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315de95005187b%3A0xfc3a76c03dfdcb0e!2sNicolas%20Bravo%20341%20Centro!5e0!3m2!1ses!2smx!4v1652822012953!5m2!1ses!2smx"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.471885459347!2d-102.196537185107!3d17.956769690859733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315de95005187b%3A0xfc3a76c03dfdcb0e!2sNicolas%20Bravo%20341%20Centro!5e0!3m2!1ses!2smx!4v1654610659670!5m2!1ses!2smx"
                         width="600" 
                         height="450" 
                         style="border:0;" 
