--- a/servicios.html
+++ b/servicios.html
@@ -407,7 +407,7 @@
         </div>
         <div class="container-fluid p-0 my-5">
             <div class="tituloSeccion text-center d-flex align-items-center mb-5 colorLetraBlanco-n">
-                <div class="titulo w-100 z-index-2">
+                <div class="titulo w-50 z-index-2 mx-auto">
                     <h4 class="mb-0 text-white">
                         También contamos con la venta e instalación de productos y equipo para albercas, desde filtros, motobombas, arenales,
                         trampolines equipo de limpieza, equipo de decoración como:
