--- a/contacto.html
+++ b/contacto.html
@@ -123,7 +123,7 @@
     </header>
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo imagen-fondo-b row mx-0 p-r">
-            <div class="text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header mb-0px">
+            <div class="contenido-contacto contenedor-informacion-imagen text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header mb-0px text-center">
                 <span class="linea-horizontal mx-auto w-auto"></span>
                 Para visitas, levantamiento de obra y/o cotizaciones de servicios, póngase en contacto con nosotros:
             </div>
