--- a/index.html
+++ b/index.html
@@ -593,10 +593,10 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <article class="tarjeta-presentacion-servicio col-12">
                         <div class="header-tarjeta">
-                            <h3>Quimicos</h3>
+                            <h3>Químicos</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/servicios/quimicos_oficina.jpg" alt="Quimicos">
+                            <img src="img/servicios/quimicos_oficina.jpg" alt="Químicos">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
@@ -699,10 +699,10 @@
                     </div>
                     <article class="tarjeta-presentacion-servicio col-12">
                         <div class="header-tarjeta">
-                            <h3>Piscina</h3>
+                            <h3>Piscinas</h3>
                         </div>
                         <div class="contenido-tarjeta">
-                            <img src="img/galeria/tipos_alberca/residenciales/piscinas.jpg" alt="Piscina">
+                            <img src="img/galeria/tipos_alberca/residenciales/piscinas.jpg" alt="Piscinas">
                         </div>
                     </article>
                     <article class="tarjeta-presentacion-servicio col-12">
