--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
                     </div>
                     <div class="col-12 bg-white p-3 p-lg-5 mt-5">
                         <h3 class="text-center w-auto mb-4 fw-bold">
-                            Solicito personal para el Área de Ingeniería Civil, con experiencia en la realización de las siguientes Actividades:
+                            Solicito personal para el Área de Ingeniería Civil, Hidrosanitaria con experiencia en la realización de las siguientes Actividades:
                         </h3>
                         <div class="card mx-auto bg-white">
                             <div class="card-body">
@@ -1013,7 +1013,7 @@
                             </ul>
 						</div>
 						<div class="row mt-4 p-5">
-							<h4 class="b-bottom-amarillo">Si eres Proveedor del Área Civil, Estructural, Acabados o Mantenimientos:</h4>
+							<h4 class="b-bottom-amarillo">Si eres Proveedor del Área Civil, Hidrosanitaria , Estructural, Acabados o Mantenimientos:</h4>
 							<div class="proveedorCV">
 								<p class="fw-bold mb-0 font-size-18px">Envia CV de la empresa a:</p>
 								<li>
