--- a/servicios.html
+++ b/servicios.html
@@ -509,6 +509,9 @@
                         <h3 class="text-center w-auto mb-4 fw-bold">
                             Solicito personal para el Área de Ingeniería Civil, Hidrosanitaria con experiencia en la realización de las siguientes Actividades:
                         </h3>
+                        <div class="contenedor-img-ingenieria-civil">
+                            <img src="img/imagen_ingenieria_civil.webp" alt="Ingeniería Civil">
+                        </div>
                         <div class="card mx-auto bg-white">
                             <div class="card-body">
                                 <p class="card-text">
