--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
                     </h4>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page w-100" 
                         data-href="https://www.facebook.com/AlbercasDelMarLC"
@@ -1112,7 +1112,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/ConstructoraRioMarLZC"
@@ -1128,7 +1128,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/pozosdeaguahl"
@@ -1144,7 +1144,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 mx-auto">
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
