--- a/contacto.html
+++ b/contacto.html
@@ -155,9 +155,12 @@
         </nav>
     </h1>
     <main>
+        <h1 
+        class="fw-300 text-center titulo-descriptivo titulo-principal letter-spacing-5px text-uppercase mb-0">
+            FORMULARIO DE COTIZACIÓN:
+        </h1>
         <div class="container">
             <div class="row">
-                <h1 class="text-uppercase text-center titulo-principal">FORMULARIO DE COTIZACIÓN:</h1>
                 <form id="frmConsulta">
                     <div class="row">
                         <div class="col-12 col-md-6 form-group">
@@ -480,7 +483,7 @@
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
                     </h4>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page w-100" 
                         data-href="https://www.facebook.com/AlbercasDelMarLC"
@@ -496,7 +499,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/ConstructoraRioMarLZC"
@@ -512,7 +515,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/pozosdeaguahl"
@@ -528,7 +531,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 mx-auto">
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
