--- a/galery.html
+++ b/galery.html
@@ -844,7 +844,7 @@
                     Últimas <span>Publicaciones</span>
                     <hr class="w-auto">
                 </h4>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div 
                     class="fb-page w-100" 
                     data-href="https://www.facebook.com/AlbercasDelMarLC"
@@ -860,7 +860,7 @@
                         </blockquote>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div 
                     class="fb-page" 
                     data-href="https://www.facebook.com/ConstructoraRioMarLZC"
@@ -876,7 +876,7 @@
                         </blockquote>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-6 col-lg-4">
                     <div 
                     class="fb-page" 
                     data-href="https://www.facebook.com/pozosdeaguahl"
@@ -892,7 +892,7 @@
                         </blockquote>
                     </div>
                 </div>
-                <div class="col-12 col-md-4 mx-auto">
+                <div class="col-12 col-md-6 col-lg-4 mx-auto">
                     <div 
                     class="fb-page" 
                     data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
