--- a/nosotros.html
+++ b/nosotros.html
@@ -501,7 +501,7 @@
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
                     </h4>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page w-100" 
                         data-href="https://www.facebook.com/AlbercasDelMarLC"
@@ -517,7 +517,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/ConstructoraRioMarLZC"
@@ -533,7 +533,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/pozosdeaguahl"
@@ -549,7 +549,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 mx-auto">
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
