--- a/servicios.html
+++ b/servicios.html
@@ -689,7 +689,7 @@
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
                     </h4>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page w-100" 
                         data-href="https://www.facebook.com/AlbercasDelMarLC"
@@ -705,7 +705,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/ConstructoraRioMarLZC"
@@ -721,7 +721,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/pozosdeaguahl"
@@ -737,7 +737,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 mx-auto">
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
                         data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
