--- a/contacto.html
+++ b/contacto.html
@@ -224,6 +224,9 @@
             </div>
         </div>
     </main>
+    <button type="button" class="irAbajo">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+    </button>
     <footer class="site-footer">
         <div class="container">
             <div class="row mb-3">
