--- a/nosotros.html
+++ b/nosotros.html
@@ -242,6 +242,9 @@
             </table>
         </div>
     </section>
+    <button type="button" class="irAbajo">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+    </button>
     <footer class="site-footer">
         <div class="container">
             <div class="row mb-3">
