--- a/index.html
+++ b/index.html
@@ -837,6 +837,9 @@
             </div>
         </section>
     </main>
+    <button type="button" class="irAbajo">
+		<i class="fa fa-arrow-down" aria-hidden="true"></i>
+	</button>
     <footer class="site-footer">
         <div class="container">
             <div class="row mb-3">
